--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -22,14 +22,12 @@ scrape_configs:
           firstline: '^\d{4}-\d{2}-\d{2}'
           max_wait_time: 3s
       - regex:
-          expression: >
-            ^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+
-            fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+
-            (?P<level>\S+)(?:\s+\[(?P<jail>[^\]]+)\])?\s+(?P<msg>.*)$
+          expression: '^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)(?:\s+\[(?P<jail>[^\]]+)\])?\s+(?P<msg>.*)$'
+
       - timestamp:
           source: time
-          format: '2006-01-02 15:04:05'
-          location: Local             # or "UTC" if the machine runs UTC
+          format: "2006-01-02 15:04:05"
+          location: Local # or "UTC" if the machine runs UTC
       - labels:
           component: component
           pid: pid
