--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -331,9 +331,17 @@ jobs:
         run: |
           sleep 10
           echo "--- Checking logs in API ---"
+          echo "--- API container logs (late) ---"
+          docker compose logs api
+
+          # Define time window for query
+          START_TIME_QUERY=$((MOCK_LOG_TS_EPOCH - 10)) # 10 seconds before mock log
+          END_TIME_QUERY=$((MOCK_LOG_TS_EPOCH + 20))   # 20 seconds after mock log (to cover sleep + processing)
+
+          echo "Querying API with start=${START_TIME_QUERY} and end=${END_TIME_QUERY}"
 
           # Check logs and verify response
-          response=$(curl --fail "http://localhost:8000/fail2ban/logs?limit=10&filter_text=Ban%2080.94.95.112")
+          response=$(curl --fail "http://localhost:8000/fail2ban/logs?limit=100&start=${START_TIME_QUERY}&end=${END_TIME_QUERY}")
           echo "API Response:"
           echo "$response" | jq .
           echo "$response" | grep -q "80.94.95.112" || (echo "Expected IP not found in logs" && exit 1)
