--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -16,6 +16,7 @@ scrape_configs:
     static_configs:
       - targets: [localhost]
         labels:
+          job: fail2ban
           __path__: ${FAIL2BAN_LOG_PATH}
     pipeline_stages:
       - multiline:
